--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -11,6 +11,14 @@ env:
   TMPDIR: "$TARTARUS_HOME/tmp"
 
 steps:
+  - label: "save main ID build" # This is required to later retrieve the latest main build ID and compare artifacts
+    if: "build.branch == 'main'"
+    command: |
+      echo "Setting metadata with build ID: $BUILDKITE_BUILD_ID"
+      buildkite-agent meta-data set "latest-main-build" "$BUILDKITE_BUILD_ID"
+    agents:
+      queue: Oceananigans-benchmarks
+    
   - label: "🏕️ initialize tartarus environment"
     key: "init"
     env:
@@ -34,6 +42,7 @@ steps:
     key: "benchmarks"
     agents:
       queue: "Oceananigans-benchmarks"
+
     command: |
       # Instantiate
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project --check-bounds=no -e 'using Pkg; Pkg.instantiate()'
