add a conditional save

--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -11,17 +11,6 @@ env:
   TMPDIR: "$TARTARUS_HOME/tmp"
 
 steps:
-  - label: "conditional metadata save"
-    command: |
-      if [ "$BUILDKITE_BRANCH" = "main" ]; then
-        echo "Saving build ID for main..."
-        buildkite-agent meta-data set "latest-main-build" "$BUILDKITE_BUILD_ID"
-      else
-        echo "Not on main, skipping metadata save."
-      fi
-    agents:
-      queue: Oceananigans-benchmarks
-    
   - label: "🏕️ initialize tartarus environment"
     key: "init"
     env:
@@ -41,6 +30,19 @@ steps:
 
   - wait
 
+  - label: "💾 conditional metadata save"
+    key: "save-metadata"
+    agents:
+      queue: Oceananigans-benchmarks
+    
+    command: |
+      if [ "$BUILDKITE_BRANCH" = "main" ]; then
+        echo "Saving build ID for main..."
+        buildkite-agent meta-data set "latest-main-build" "$BUILDKITE_BUILD_ID"
+      else
+        echo "Not on main, skipping metadata save."
+      fi
+    
   - label: "🚀 Oceananigans GPU benchmarks"
     key: "benchmarks"
     agents:
