--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -108,3 +108,46 @@ steps:
     soft_fail:
       - exit_status: 3
 
+  - label: "⬇ Fetch and compare with main"
+    if: "build.pull_request.labels includes \"benchmark performance\""
+    command: |
+      # First we donwload the artifacts from the current PR build
+      buildkite-agent artifact download "*.txt" .
+
+      # Then we fetch the artifacts from the main branch build
+
+      MAIN_BUILD_ID=$(buildkite-agent meta-data get "latest-main-build")
+
+      # Ensure the MAIN_BUILD_ID is valid
+      if [ -z "$MAIN_BUILD_ID" ]; then
+        echo "Error: No main branch build ID found."
+        exit 1
+      fi
+
+      curl -s -H "Authorization: Bearer ${BUILDKITE_API_TOKEN}" \
+        "https://api.buildkite.com/v2/organizations/clima/pipelines/Oceananigans-benchmarks/builds/${MAIN_BUILD_ID}/artifacts" \
+        -o artifacts.json
+
+      # Comparing the artifacts, creating the diff files and uploading them
+      for file in $(jq -r '.[] | select(.filename | endswith(".txt")) | .filename' artifacts.json); do
+        echo "Downloading $file from main..."
+        url=$(jq -r --arg filename "$file" '.[] | select(.filename == $filename) | .download_url' artifacts.json)
+        curl -s -L "$url" -o "baseline_$file"
+
+        echo "Comparing $file with baseline..."
+        if [ -f "$file" ]; then
+          diff -u "baseline_$file" "$file" > "diff_$file" || true
+        else
+          echo "$file not found in PR build. Skipping diff." > "diff_$file"
+        fi
+      done
+
+      echo "Uploading diffs..."
+      buildkite-agent artifact upload "diff_*.txt"
+
+      echo "Annotating summary..."
+      for diff in diff_*.txt; do
+        buildkite-agent annotate --style info --context "$diff" < "$diff"
+      done
+    env:
+      BUILDKITE_API_TOKEN: "{{BUILDKITE_API_TOKEN}}"
