--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -120,7 +120,7 @@ steps:
       buildkite-agent artifact download "*.txt" .
 
       # Then we fetch the artifacts from the main branch build
-      MAIN_BUILD_ID=$(buildkite-agent meta-data get "latest-main-build")
+      MAIN_BUILD_ID="0196647d-1e86-44a4-8a72-6e70f792cd20"$(buildkite-agent meta-data get "latest-main-build")
 
       # Ensure the MAIN_BUILD_ID is valid
       if [ -z "$MAIN_BUILD_ID" ]; then
