see if this works in fetching the

--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -110,6 +110,14 @@ steps:
     soft_fail:
       - exit_status: 3
 
+  - label: "Fetch Main Build Metadata"
+    key: "fetch-metadata"
+    agents:
+      queue: "Oceananigans-benchmarks"
+    command:
+      - export MAIN_BUILD_NUM=45 # $(buildkite-agent meta-data get "latest-main-build-number")
+      - export MAIN_BUILD_JOB=01966378-3b39-42b4-b65b-0af1a9b04892 # $(buildkite-agent meta-data get "latest-main-job-number")
+
   - label: "⬇ Fetch and compare with main"
     key: "fetch-compare"
     agents:
@@ -120,10 +128,8 @@ steps:
       buildkite-agent artifact download "*.txt" .
 
       # Then we fetch the artifacts from the main branch build
-      MAIN_BUILD_ID="0196647d-1e86-44a4-8a72-6e70f792cd20" # $(buildkite-agent meta-data get "latest-main-build")
-
       curl -s -H "Authorization: Bearer ${BUILDKITE_API_TOKEN}" \
-        "https://api.buildkite.com/v2/organizations/clima/pipelines/oceananigans-benchmarks-1/builds/45/jobs/01966378-3b39-42b4-b65b-0af1a9b04892/artifacts" \
+        "https://api.buildkite.com/v2/organizations/clima/pipelines/oceananigans-benchmarks-1/builds/${MAIN_BUILD_NUM}/jobs/${MAIN_BUILD_JOB}/artifacts" \
         -o artifacts.json
 
       echo "🔍 artifacts.json contents:"
@@ -131,15 +137,15 @@ steps:
 
       # Comparing the artifacts, creating the diff files and uploading them
       for file in $(jq -r '.[] | select(.filename | endswith(".txt")) | .filename' artifacts.json); do
-        echo "Downloading $file from main..."
-        url=$(jq -r --arg filename "$file" '.[] | select(.filename == $filename) | .download_url' artifacts.json)
-        curl -s -L "$url" -o "baseline_$file"
+        echo "Downloading ${file} from main..."
+        url=$(jq -r --arg filename "${file}" '.[] | select(.filename == ${filename}) | .download_url' artifacts.json)
+        curl -s -L "$url" -o "baseline_${file}"
 
         echo "Comparing $file with baseline..."
-        if [ -f "$file" ]; then
-          diff -u "baseline_$file" "$file" > "diff_$file" || true
+        if [ -f "${file}" ]; then
+          diff -u "baseline_$file" "${file}" > "diff_${file}" || true
         else
-          echo "$file not found in PR build. Skipping diff." > "diff_$file"
+          echo "${file} not found in PR build. Skipping diff." > "diff_${file}"
         fi
       done
 
@@ -148,5 +154,8 @@ steps:
 
       echo "Annotating summary..."
       for diff in diff_*.txt; do
-        buildkite-agent annotate --style info --context "$diff" < "$diff"
+        buildkite-agent annotate --style info --context "${diff}" < "${diff}"
       done
+    env:
+      MAIN_BUILD_NUM: $MAIN_BUILD_NUM # buildkite-agent meta-data get "latest-main-build-number"
+      MAIN_BUILD_JOB: $MAIN_BUILD_JOB # buildkite-agent meta-data get "latest-main-job-number"
