--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -40,7 +40,8 @@ steps:
     command: |
       if [ "$BUILDKITE_BRANCH" = "main" ]; then
         echo "Saving build ID for main..."
-        buildkite-agent meta-data set "latest-main-build" "$BUILDKITE_BUILD_ID"
+        buildkite-agent meta-data set "latest-main-build-number" "$BUILDKITE_BUILD_NUMBER"
+        buildkite-agent meta-data set "latest-main-job-number"   "$BUILDKITE_JOB_ID"
       else
         echo "Not on main, skipping metadata save."
       fi
@@ -110,14 +111,6 @@ steps:
     soft_fail:
       - exit_status: 3
 
-  - label: "Fetch Main Build Metadata"
-    key: "fetch-metadata"
-    agents:
-      queue: "Oceananigans-benchmarks"
-    command:
-      - export MAIN_BUILD_NUM=45 # $(buildkite-agent meta-data get "latest-main-build-number")
-      - export MAIN_BUILD_JOB=01966378-3b39-42b4-b65b-0af1a9b04892 # $(buildkite-agent meta-data get "latest-main-job-number")
-
   - label: "⬇ Fetch and compare with main"
     key: "fetch-compare"
     agents:
@@ -127,6 +120,12 @@ steps:
       # First we donwload the artifacts from the current PR build
       buildkite-agent artifact download "*.txt" .
 
+      export MAIN_BUILD_NUM=45 # $(buildkite-agent meta-data get "latest-main-build-number")
+      export MAIN_BUILD_JOB=01966378-3b39-42b4-b65b-0af1a9b04892 # $(buildkite-agent meta-data get "latest-main-job-number")
+
+      echo $MAIN_BUILD_NUM
+      echo $MAIN_BUILD_JOB
+      
       # Then we fetch the artifacts from the main branch build
       curl -s -H "Authorization: Bearer ${BUILDKITE_API_TOKEN}" \
         "https://api.buildkite.com/v2/organizations/clima/pipelines/oceananigans-benchmarks-1/builds/${MAIN_BUILD_NUM}/jobs/${MAIN_BUILD_JOB}/artifacts" \
@@ -156,6 +155,3 @@ steps:
       for diff in diff_*.txt; do
         buildkite-agent annotate --style info --context "${diff}" < "${diff}"
       done
-    env:
-      MAIN_BUILD_NUM: $MAIN_BUILD_NUM # buildkite-agent meta-data get "latest-main-build-number"
-      MAIN_BUILD_JOB: $MAIN_BUILD_JOB # buildkite-agent meta-data get "latest-main-job-number"
