--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -86,9 +86,29 @@ steps:
       # rm immersed_output.nsys-rep
       # rm immersed_output.sqlite
 
+    artifact_paths:
+      - "periodic_output.txt"
+      - "bounded_output.txt"
+      - "periodic_cheap_advection_output.txt"
+      - "bounded_cheap_advection_output.txt"
+      - "immersed_output.txt"
+    soft_fail:
+      - exit_status: 3
+    soft_fail:
+      - exit_status: 3
+
+  - label: "⬇ Fetch and compare with main"
+    key: "fetch-compare"
+    agents:
+      queue: "Oceananigans-benchmarks"
+
+    command: |
+      # First we donwload the artifacts from the current PR build
+      buildkite-agent artifact download "*.txt" .
+
       # Comparing with main branch artifacts
-      export MAIN_BUILD_NUM=$(buildkite-agent meta-data get "latest-main-build-number")
-      export MAIN_BUILD_JOB=$(buildkite-agent meta-data get "latest-main-job-number")
+      export MAIN_BUILD_NUM=45 # $(buildkite-agent meta-data get "latest-main-build-number")
+      export MAIN_BUILD_JOB=01966378-3b39-42b4-b65b-0af1a9b04892 # $(buildkite-agent meta-data get "latest-main-job-number")
 
       echo \$MAIN_BUILD_NUM
       echo \$MAIN_BUILD_JOB
@@ -131,16 +151,9 @@ steps:
         echo "Not on main, skipping metadata save."
       fi
 
-    artifact_paths:
-      - "periodic_output.txt"
-      - "bounded_output.txt"
-      - "periodic_cheap_advection_output.txt"
-      - "bounded_cheap_advection_output.txt"
-      - "immersed_output.txt"
+    artifacts_paths:
       - "diff_periodic_output.txt"
       - "diff_bounded_output.txt"
       - "diff_periodic_cheap_advection_output.txt"
       - "diff_bounded_cheap_advection_output.txt"
       - "diff_immersed_output.txt"
-    soft_fail:
-      - exit_status: 3
