--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -47,7 +47,7 @@ steps:
         "bounded_cheap_advection"
         "immersed"
       )
-
+      
       # Profile each benchmark group, save output in txt and remove profiles
       for BENCHMARK_GROUP in "\${BENCHMARK_GROUPS[@]}"; do
         # Run benchmarks
@@ -62,16 +62,6 @@ steps:
         rm \${OUTPUT_PREFIX}.sqlite
       done
 
-      # Finally save job ID and build number to later use to retrieve the artifacts
-
-      if [ "$BUILDKITE_BRANCH" = "main" ]; then
-        echo "Saving build ID for main..."
-        buildkite-agent meta-data set "latest-main-build-number" "$BUILDKITE_BUILD_NUMBER"
-        buildkite-agent meta-data set "latest-main-job-id" "$BUILDKITE_JOB_ID"
-      else
-        echo "Not on main, skipping metadata save."
-      fi
-
     artifact_paths:
       - "periodic_output.txt"
       - "bounded_output.txt"
@@ -81,3 +71,46 @@ steps:
     soft_fail:
       - exit_status: 3
 
+  - label: "⬇ Fetch and compare with main"
+    key: "fetch-compare"
+    agents:
+      queue: "Oceananigans-benchmarks"
+
+    command: |
+      # First we donwload the artifacts from the current PR build
+      buildkite-agent artifact download "*.txt" .
+
+      # Getting the JSON file of the latest passing main build
+      MAIN_BUILD_JSON=\$(curl -s -H "Authorization: Bearer ${BUILDKITE_API_TOKEN}" "https://api.buildkite.com/v2/organizations/clima/pipelines/oceananigans-benchmarks-1/builds?branch=main&state=passed&per_page=1")
+
+      export MAIN_BUILD_NUM=\$(echo "\$MAIN_BUILD_JSON" | jq -r '.[0].number')
+      echo \$MAIN_BUILD_NUM
+
+      # Then we fetch the artifacts from the main branch build
+      curl -s -H "Authorization: Bearer ${BUILDKITE_API_TOKEN}" \
+        "https://api.buildkite.com/v2/organizations/clima/pipelines/oceananigans-benchmarks-1/builds/\${MAIN_BUILD_NUM}/artifacts" \
+        -o artifacts.json
+
+      echo "🔍 artifacts.json contents:"
+      cat artifacts.json
+
+      # Comparing the artifacts, creating the diff files and uploading them
+      for file in \$(jq -r '.[] | select(.filename | endswith(".txt")) | .filename' artifacts.json); do
+          echo "Downloading \$file from main..."
+          url=$(jq -r --arg filename "\$file" '.[] | select(.filename == \$filename) | .download_url' artifacts.json)
+          curl -s -L -H "Authorization: Bearer ${BUILDKITE_API_TOKEN}" "\$url" -o "baseline_\$file"
+
+          echo "Comparing \$file with baseline..."
+          if [ -f "\$file" ]; then
+              diff -u "baseline_\$file" "\$file" > "diff_\$file" || true
+          else
+              echo "\$file not found in PR build. Skipping diff." > "diff_\$file"
+          fi
+      done
+
+    artifact_paths:
+      - "diff_periodic_output.txt"
+      - "diff_bounded_output.txt"
+      - "diff_periodic_cheap_advection_output.txt"
+      - "diff_bounded_cheap_advection_output.txt"
+      - "diff_immersed_output.txt"
