--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+KahanSummation = "8e2b3108-d4c1-50be-a7a2-16352aec75c3"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 KrylovPreconditioners = "45d422c2-293f-44ce-8315-2cb988662dec"
@@ -75,6 +76,7 @@ Glob = "1.3"
 InteractiveUtils = "1.9"
 IterativeSolvers = "0.9"
 JLD2 = "0.4, 0.5"
+KahanSummation = "0.3.1"
 KernelAbstractions = "0.9.21"
 Krylov = "0.10.0"
 KrylovPreconditioners = "0.3.2"
