--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -14,7 +14,7 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 TimesDates = "bdfc003b-8df8-5c39-adcd-3a9087f5df4a"
 
 [compat]
-CairoMakie = "0.11, 0.12, 0.13"
+CairoMakie = "0.11, 0.12, 0.13, 0.14"
 Documenter = "1"
 DocumenterCitations = "1"
 JLD2 = "0.4, 0,5"
