--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -77,7 +77,7 @@ steps:
       queue: "Oceananigans-benchmarks"
 
     command: |
-      # First we donwload the artifacts from the current PR build
+      # First we download the artifacts from the current PR build
       buildkite-agent artifact download "*.txt" .
 
       # Getting the JSON file of the latest passing main build
