--- a/Project.toml
+++ b/Project.toml
@@ -82,7 +82,7 @@ Krylov = "0.10.0"
 KrylovPreconditioners = "0.3.2"
 LinearAlgebra = "1.9"
 Logging = "1.9"
-MPI = "0.16, 0.17, 0.18, 0.19, 0.20, < 0.20.22"
+MPI = "0.16, 0.17, 0.18, 0.19, 0.20.0 - 0.20.21"
 Makie = "0.21, 0.22, 0.23"
 MakieCore = "0.7, 0.8, 0.9, 0.10"
 Metal = "1.5"
