--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -71,29 +71,29 @@ steps:
           - "CPU"
           - "GPU"
         group:
-          - "🐇 unit"
-          - "👻 abstract_operations"
-          - "🕊 poisson_solvers_1"
-          - "🦖 poisson_solvers_2"
-          - "🌷 matrix_poisson_solvers"
-          - "🦤 general_solvers"
-          - "🎣 turbulence_closures"
-          - "🦀 time_stepping_1"
-          - "🦈 time_stepping_2"
-          - "🦟 time_stepping_3"
-          - "🐫 nonhydrostatic_regression"
-          - "🐙 hydrostatic_free_surface"
-          - "🫐 tripolar_grid"
-          - "🥑 vertical_coordinate"
-          - "🙈 hydrostatic_regression"
-          - "🦢 shallow_water"
-          - "🐳 simulation"
-          - "🍂 lagrangian_particles"
-          - "🧅 multi_region"
-          - "🦧 scripts"
-          - "👺 enzyme"
-          - "👹 reactant_1"
-          - "🎭 reactant_2"
+          # - "🐇 unit"
+          # - "👻 abstract_operations"
+          # - "🕊 poisson_solvers_1"
+          # - "🦖 poisson_solvers_2"
+          # - "🌷 matrix_poisson_solvers"
+          # - "🦤 general_solvers"
+          # - "🎣 turbulence_closures"
+          # - "🦀 time_stepping_1"
+          # - "🦈 time_stepping_2"
+          # - "🦟 time_stepping_3"
+          # - "🐫 nonhydrostatic_regression"
+          # - "🐙 hydrostatic_free_surface"
+          # - "🫐 tripolar_grid"
+          # - "🥑 vertical_coordinate"
+          # - "🙈 hydrostatic_regression"
+          # - "🦢 shallow_water"
+          # - "🐳 simulation"
+          # - "🍂 lagrangian_particles"
+          # - "🧅 multi_region"
+          # - "🦧 scripts"
+          # - "👺 enzyme"
+          # - "👹 reactant_1"
+          # - "🎭 reactant_2"
     retry:
       automatic:
         - exit_status: 1
