matrix can't be empty

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -71,7 +71,7 @@ steps:
           - "CPU"
           - "GPU"
         group:
-          # - "🐇 unit"
+          - "🐇 unit"
           # - "👻 abstract_operations"
           # - "🕊 poisson_solvers_1"
           # - "🦖 poisson_solvers_2"
